--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ input, select{
   margin-top: 13%;    
 }
 th, td{
+    font-family: 'Noto Sans', sans-serif;
     border: 3px solid #f5f5f5;
     width: 25%;
     height: 15px;
